objects/WorkBadgeMissionEvent__e/WorkBadgeMissionEvent__e.object-meta.xml
<CustomObject>
    <description>WorkBadgeMissionEvent</description>
    <label>WorkBadgeMissionEvent</label>
    <pluralLabel>WorkBadgeMissionEvents</pluralLabel>
</CustomObject>