objects/WorkBadgeMissionEvent__e/fields/FeedCommentId__c.field-meta.xml
<CustomField>
    <fullName>FeedCommentId__c</fullName>
    <description>FeedCommentId</description>
    <label>FeedCommentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>