objects/WorkBadgeMissionEvent__e/fields/FeedItemId__c.field-meta.xml
<CustomField>
    <fullName>FeedItemId__c</fullName>
    <description>FeedItemId</description>
    <label>FeedItemId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>