objects/WorkBadgeMissionEvent__e/fields/IdeaCommentId__c.field-meta.xml
<CustomField>
    <fullName>IdeaCommentId__c</fullName>
    <description>IdeaCommentId</description>
    <label>IdeaCommentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>