objects/WorkBadgeMissionEvent__e/fields/IdeaId__c.field-meta.xml
<CustomField>
    <fullName>IdeaId__c</fullName>
    <description>IdeaId</description>
    <label>IdeaId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>