objects/WorkBadgeMissionEvent__e/fields/InsertedById__c.field-meta.xml
<CustomField>
    <fullName>InsertedById__c</fullName>
    <description>InsertedBy User Id</description>
    <label>InsertedById</label>
    <length>18</length>
    <type>Text</type>
</CustomField>